    for the suggestion).
  * Mode() gets a more elaborated interface and returns all modes if there
    are several.
  * SetNames() will recycle provided names and supports abbreviations.    

BUGFIXES:
  * ToWrd() for characters works again after an error crept into v. 0.99.30
    (due to insufficient testing).
  * TTestA() did not exclude the paired option, which should have been the case.
  * Dummy() will always return a matrix instead of dropping dimensions which 
    have only one level. (Credits to Daniel Wollschlaeger)
  * XLGetrange() will not refuse to import areas with XLErrors now, cell formatted
    as dates will be recognised and empty areas will not cause an error 
    anymore.
  * MedianCI will now correctly use conf.level for method="exact" and also
    return the realised conf.level. 
 

DEPRECATED:
  * PlotDev() X was both a desperate and unsuccessful attempt to rid the analysis
    code of superfluous technical reporting code. The new attempt uses a meta-code
    approach with ToWrdWithBookmark(), which does not require any changes to 
    the original code. As a result, PlotDev() has been removed.
  
  
  

DescTools 0.99.30 (2019-10-21)
------------------------------

NEW FUNCTIONS ADDED:
  * CompleteColumns() will return the names of complete columns of a data frame.
  * ToWrdB() sends the output of a code chunk to Word and tags it with
    a bookmark.
  * ToWrdPlot() does the same with a code chunk producing a plot. It plots to
    a tiff device and imports the graphic in MS-Word. These two functions allow
    to dynamically update word documents with new R-results.
  * WrdOpenFile() is used to open Word documents.
  * CmToPts() and PtsToCm() convert between centimeters and points.

UPDATED FUNCTIONS:
  * Mode() gets a real fast Rcpp implementation. (Credits to Ralf Stubner 
    and Joseph Wood)
  * Desc.numeric() will notify when the mode has higher frequency than 5%
    (which is likely to be remarkable within a numeric variable).
