@@ -1,9 +1,8 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-<<<<<<< HEAD
 Version: 0.99.31
-Date: 2019-12-21
+Date: 2019-12-01
 Authors@R: c(
   person("Andri", "Signorell", email = "andri@signorell.net", role = c("aut", "cre")),
   person("Ken"           , "Aho",                 role = c("ctb")),
@@ -116,14 +115,8 @@ Authors@R: c(
   person("Thomas"        , "Yee",                 role = c("ctb")),
   person("Achim"         , "Zeileis",             role = c("ctb"))
  )
-=======
-Version: 0.99.30
-Date: 2019-11-23
-Author: Andri Signorell. Includes R source code and/or documentation previously published by (in alphabetical order): Ken Aho, Andreas Alfons, Nanina Anderegg, Tomas Aragon, Antti Arppe, Adrian Baddeley, Kamil Barton, Ben Bolker, Hans W. Borchers, Frederico Caeiro, Stephane Champely, Daniel Chessel, Leanne Chhay, Clint Cummins, Michael Dewey, Harold C. Doran, Stephane Dray, Charles Dupont, Dirk Eddelbuettel, Jeff Enos, Claus Ekstrom, Martin Elff, Kamil Erguler, Richard W. Farebrother, John Fox, Romain Francois, Michael Friendly, Tal Galili, Matthias Gamer, Joseph L. Gastwirth, Yulia R. Gel, Juergen Gross, Gabor Grothendieck, Frank E. Harrell Jr, Richard Heiberger, Michael Hoehle, Christian W. Hoffmann, Soeren Hojsgaard, Torsten Hothorn, Markus Huerzeler, Wallace W. Hui, Pete Hurd, Rob J. Hyndman, Pablo J. Villacorta Iglesias, Christopher Jackson, Matthias Kohl, Mikko Korpela, Max Kuhn, Detlew Labes, Duncan Temple Lang, Friederich Leisch, Jim Lemon, Dong Li, Martin Maechler, Arni Magnusson, Daniel Malter, George Marsaglia, John Marsaglia, Alina Matei, David Meyer, Weiwen Miao, Giovanni Millo, Yongyi Min, David Mitchell, Franziska Mueller, Markus Naepflin, Daniel Navarro, Henric Nilsson, Klaus Nordhausen, Derek Ogle, Hong Ooi, Nick Parsons, Sandrine Pavoine, Tony Plate, Roland Rapold, William Revelle, Tyler Rinker, Brian D. Ripley, Caroline Rodriguez, Nathan Russell, Nick Sabbe, Venkatraman E. Seshan, Greg Snow, Michael Smithson, Karline Soetaert, Werner A. Stahel, Alec Stephenson, Mark Stevenson, Matthias Templ, Terry Therneau, Yves Tille, Adrian Trapletti, Joshua Ulrich, Kevin Ushey, Jeremy VanDerWal, Bill Venables, John Verzani, Gregory R. Warnes, Stefan Wellek, Hadley Wickham, Rand R. Wilcox, Peter Wolf, Daniel Wollschlaeger, Ying Wu, Thomas Yee, Achim Zeileis
-Maintainer: Andri Signorell <andri@signorell.net>
->>>>>>> cb9b273466c851110396d4e18d1565df00ff2950
 Description: A collection of miscellaneous basic statistic functions and convenience wrappers for efficiently describing data. The author's intention was to create a toolbox, which facilitates the (notoriously time consuming) first descriptive tasks in data analysis, consisting of calculating descriptive statistics, drawing graphical summaries and reporting the results. The package contains furthermore functions to produce documents using MS Word (or PowerPoint) and functions to import data from Excel. Many of the included functions can be found scattered in other packages and other sources written partly by Titans of R. The reason for collecting them here, was primarily to have them consolidated in ONE instead of dozens of packages (which themselves might depend on other packages which are not needed at all), and to provide a common and consistent interface as far as function and arguments naming, NA handling, recycling rules etc. are concerned. Google style guides were used as naming rules (in absence of convincing alternatives). The 'camel style' was consequently applied to functions borrowed from contributed R packages as well.
-Suggests: RDCOMClient, tcltk
+Suggests: RDCOMClient, tcltk, VGAM
 Depends: base, stats, R (>= 3.5.0)
 Imports: graphics, grDevices, methods, MASS, utils, boot, mvtnorm, expm, Rcpp (>= 0.12.10)
 LinkingTo: Rcpp, BH
@@ -131,10 +124,10 @@ License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
 Additional_repositories: http://www.omegahat.net/R
+URL:        https://github.com/AndriSignorell/DescTools/
+BugReports: https://github.com/AndriSignorell/DescTools/issues
 SystemRequirements: C++11
 RoxygenNote: 6.1.1
 Encoding: UTF-8
-URL:        https://github.com/AndriSignorell/DescTools/
-BugReports: https://github.com/AndriSignorell/DescTools/issues
-
+NeedsCompilation: yes
 
