@@ -37,7 +37,5 @@
     \item{\code{discyear}}{year of discovery of the element}
   }
 }
-\references{\url{http://en.wikipedia.org/wiki/Periodic_table}
-%%  ~~ possibly secondary sources and usages ~~
-}
+\references{\url{http://en.wikipedia.org/wiki/Periodic_table}}
 \keyword{datasets}
