@@ -24,6 +24,7 @@ BUGFIXES:
   * ToWrd() for characters works again after an error crept into v. 0.99.30
     (due to insufficient testing).
   * TTestA() did not exclude the paired option, which should have been the case.
+    (Credits to Vilmantas Gegzna)
   * Dummy() will always return a matrix instead of dropping dimensions which 
     have only one level. (Credits to Daniel Wollschlaeger)
   * XLGetrange() will not refuse to import areas with XLErrors now, cell formatted
@@ -31,12 +32,13 @@ BUGFIXES:
     anymore.
   * MedianCI will now correctly use conf.level for method="exact" and also
     return the realised conf.level. 
+  * Corrected predict call for vglm in PseudoR2. (Thnks to Danie Wollschlaeger)    
  
 
 DEPRECATED:
   * PlotDev() X was both a desperate and unsuccessful attempt to rid the analysis
-    code of superfluous technical reporting code. The new attempt uses a meta-code
-    approach with ToWrdWithBookmark(), which does not require any changes to 
+    code of superfluous technical reporting code. The new approach uses meta-code
+    together with ToWrdWithBookmark(), which does not require any changes to 
     the original code. As a result, PlotDev() has been removed.
   
   
